--- a/lab2/app.css
+++ b/lab2/app.css
@@ -16,23 +16,25 @@ width: 500px;
 height: 200px;
 }
 #box1{
-	width:200px;
-	height:200px;
+	width:300px;
+	height:300px;
 	border:solid 2px black;
 	float:left;
 	margin-left:25px;
 
 }
 #box2{
-	width:200px;
-	height:200px;
+	width:300px;
+	height:300px;
+	border:solid 2px black;
 	float:left;
 	margin-left:25px;
 	
 }
 #box3{
-	width:200px;
-	height:200px;
+	width:300px;
+	height:300px;
+	border:solid 2px black;
 	float:left;
 	margin-left:25px;
 	
